Corrected sbase and ubase

--- a/repository/ubase/build
+++ b/repository/ubase/build
@@ -37,5 +37,5 @@ rm "$DESTDIR/usr/share/man/man1/su.1"
 
 for i in "$DESTDIR/usr/bin" 
 do 
-        strip --strip-unneeded $i 
+        strip --strip-unneeded "$DESTDIR/usr/bin/$i"
 done
