--- a/repository/runit/build
+++ b/repository/runit/build
@@ -1,20 +1,7 @@
 #!/bin/sh -e
 
 tar -xf runit-$VERSION.tar.gz
-cd init.git
-
-sed -i 's|log "Welcome to KISS!"||g'           lib/init/rc.boot
-sed -i 's|"${hostname:-KISS}"|/etc/hostname|g' lib/init/rc.boot
-sed -i 's|=>|@|g'                              lib/init/rc.lib
-
-$CC -o kpow bin/kpow.c -static 
-
-install -Dm755 lib/init/rc.lib      "$DESTDIR/usr/lib/init/rc.lib" 
-install -Dm755 lib/init/rc.boot     "$DESTIDR/etc/runit/1"  
-install -Dm755 lib/init/rc.shutdown "$DESTDIR/etc/runit/3"
-install -Dm755 kpow                 "$DESTDIR/usr/bin/kpow" 
-
-cd ../admin/runit-$VERSION/src
+cd admin/runit-$VERSION/src
 
 patch -p1 < ../../../fix-missing-headers.patch
 patch -p1 < ../../../svlogd.patch
