--- a/repository/musl/build
+++ b/repository/musl/build
@@ -1,22 +1,25 @@
 #!/bin/sh -e
 
+mkdir -p "$DESTDIR/usr/bin" 
+$CC $CFLAGS getent.c   -o "$DESTDIR/usr/bin/getent" 
+$CC $CFLAGS getconf.c  -o "$DESTDIR/usr/bin/getconf"
+
+install -Dm755 getconf.1 "$DESTDIR/usr/share/man/man1/getconf.1"
+install -Dm755 getent.1  "$DESTDIR/usr/share/man/man1/getent.1"
+
+install -Dm755 cdefs.h "$DESTDIR/usr/include/sys/cdefs.h"
+install -Dm755 queue.h "$DESTDIR/usr/include/sys/queue.h"
+install -Dm755 tree.h  "$DESTDIR/usr/include/sys/tree.h"
+
 tar -xf musl-$VERSION.tar.gz
 cd musl-$VERSION
 
 ./configure \
-    --prefix=/usr \
-    --syslibdir=/usr/lib
+	--prefix=/usr \
+	--syslibdir=/usr/lib
 
 make
 make DESTDIR="$DESTDIR" install
 
-mkdir -p "$DESTDIR/usr/bin"
 ln -s /usr/lib/ld-musl-armhf.so.1 "$DESTDIR/usr/bin/ldd"
-
-# Install BSD compatibility headers.
-install -Dm 755 cdefs.h "$DESTDIR/usr/include/sys/cdefs.h"
-install -Dm 755 queue.h "$DESTDIR/usr/include/sys/queue.h"
-install -Dm 755 tree.h  "$DESTDIR/usr/include/sys/tree.h"
-
-# Install getconf.
-$CC $CFLAGS getent.c  -o "$DESTDIR/usr/bin/getent"
+ln -sf libc.so "$DESTDIR/usr/lib/ld-musl-armhf.so.1"
