--- a/repository/tzdata/build
+++ b/repository/tzdata/build
@@ -3,13 +3,18 @@
 tar -xf $VERSION.tar.gz
 cd $VERSION
 
+sed -i 's|sbin|bin|g' Makefile
+
 make
 make DESTDIR="$DESTDIR" install
 
 rm -rf "$DESTDIR/etc"
-set -- africa asia australasia europe northamerica southamerica
 
-./zic -d "$DESTDIR/usr/share/zoneinfo" "$@"
-./zic -d "$DESTDIR/usr/share/zoneinfo/posix" "$@"
-./zic -d "$DESTDIR/usr/share/zoneinfo/right" -L leapseconds "$@"
+for t in africa asia australasia europe northamerica southamerica
+do
+	./zic -d "$DESTDIR/usr/share/zoneinfo" $t
+	./zic -d "$DESTDIR/usr/share/zoneinfo/right" -L leapseconds $t
+done
+
+# Apparently, for POSIX compliance
 ./zic -d "$DESTDIR/usr/share/zoneinfo" -p America/New_York
