drop BSD sort, just use sbase

--- a/repository/sbase/build
+++ b/repository/sbase/build
@@ -14,6 +14,9 @@ make \
 	DESTDIR="$DESTDIR" \
 	install
 
+install -Dm644 ../cron.run "$DESTDIR/etc/sv/cron/run" 
+ln -sf /run/runit/supervise.cron "$DESTDIR/etc/sv/cron/supervise"
+
 # strings and xargs already provided
 
 rm "$DESTDIR/usr/bin/strings"
@@ -21,22 +24,13 @@ rm "$DESTDIR/usr/bin/xargs"
 rm "$DESTDIR/usr/share/man/man1/strings.1"
 rm "$DESTDIR/usr/share/man/man1/xargs.1"
 
-# cal and cron are unneeded
-
-rm "$DESTDIR/usr/bin/cal"
-rm "$DESTDIR/usr/bin/cron"
-rm "$DESTDIR/usr/share/man/man1/cal.1"
-rm "$DESTDIR/usr/share/man/man1/cron.1"
-
-# tar, find, grep, sort and sed are (sadly) too strict to be usable
+# tar, find, grep, and sed are (sadly) too strict to be usable
 
 rm "$DESTDIR/usr/bin/tar"
 rm "$DESTDIR/usr/bin/find"
 rm "$DESTDIR/usr/bin/grep"
-rm "$DESTDIR/usr/bin/sort"
 rm "$DESTDIR/usr/bin/sed"
 rm "$DESTDIR/usr/share/man/man1/tar.1"
 rm "$DESTDIR/usr/share/man/man1/find.1"
 rm "$DESTDIR/usr/share/man/man1/grep.1"
-rm "$DESTDIR/usr/share/man/man1/sort.1"
 rm "$DESTDIR/usr/share/man/man1/sed.1"
