--- a/repository/libarchive/build
+++ b/repository/libarchive/build
@@ -24,6 +24,6 @@ find $DESTDIR -type f -name '*.la' -delete
 
 install -Dm644 COPYING "$DESTDIR/usr/share/LICENSES/libarchive.license" 
 
-ln -s bsdcpio  "$DESTDIR/usr/bin/cpio"
-ln -s bsdtar   "$DESTDIR/usr/bin/tar"
-ln -s bsdunzip "$DESTDIR/usr/bin/unzip"
+ln -sf bsdcpio  "$DESTDIR/usr/bin/cpio"
+ln -sf bsdtar   "$DESTDIR/usr/bin/tar"
+ln -sf bsdunzip "$DESTDIR/usr/bin/unzip"
