--- a/repository/musl/build
+++ b/repository/musl/build
@@ -21,5 +21,5 @@ cd musl-$VERSION
 make
 make DESTDIR="$DESTDIR" install
 
-ln -s /usr/lib/ld-musl-armhf.so.1 "$DESTDIR/usr/bin/ldd"
+ln -sf /usr/lib/ld-musl-armhf.so.1 "$DESTDIR/usr/bin/ldd"
 ln -sf libc.so "$DESTDIR/usr/lib/ld-musl-armhf.so.1"
