--- a/repository/pigz/build
+++ b/repository/pigz/build
@@ -12,4 +12,4 @@ $CC -static -o pigz *.o -lz
 install -Dm755 -t "$DESTDIR/usr/bin" pigz
 install -Dm644 -t "$DESTDIR/usr/share/man/man1" pigz.1
 
-ln -s pigz "$DESTDIR/usr/bin/gzip"
+ln -sf pigz "$DESTDIR/usr/bin/gzip"
