--- a/repository/ubase/build
+++ b/repository/ubase/build
@@ -2,6 +2,8 @@
 
 cd ubase
 
+patch -p1 < ../getty-login-add-autologin.patch
+
 make \ 
 	PREFIX=/usr \ 
 	CFLAGS="$CFLAGS -static" \ 
@@ -29,8 +31,3 @@ rm "$DESTDIR/usr/bin/mountpoint"
 rm "$DESTDIR/usr/share/man/man8/mount.8" 
 rm "$DESTDIR/usr/share/man/man8/umount.8" 
 rm "$DESTDIR/usr/share/man/man1/mountpoint.1" 
-
-# su is unneeded
-
-rm "$DESTDIR/usr/bin/su" 
-rm "$DESTDIR/usr/share/man/man1/su.1"
