--- a/repository/findutils/build
+++ b/repository/findutils/build
@@ -6,7 +6,7 @@ cd findutils-$VERSION
 ./configure --prefix=/usr
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
 rm -rf "$DESTDIR/usr/share/locale"
