--- a/repository/m4/build
+++ b/repository/m4/build
@@ -6,6 +6,6 @@ cd m4-$VERSION
 ./configure --prefix=/usr
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/info"
