--- a/repository/diff/build
+++ b/repository/diff/build
@@ -13,3 +13,5 @@ $CC -static diff.c *.o -o diff
 
 install -Dm755 -t "$DESTDIR/usr/bin" diff
 install -Dm644 -t "$DESTDIR/usr/share/man/man1" diff.1
+
+strip --strip-unneeded "$DESTDIR/usr/bin/diff"
