--- a/repository/util-linux/build
+++ b/repository/util-linux/build
@@ -30,7 +30,7 @@ cd util-linux-$VERSION
 	--without-python
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/man/man3"
 find $DESTDIR -type f -name '*.la' -delete
