--- a/repository/yash/build
+++ b/repository/yash/build
@@ -18,6 +18,6 @@ cd yash-$VERSION
 	--disable-ulimit
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR="$DESTDIR" install-strip
 
-ln -sf sh "$DESTDIR/usr/bin/yash"
+ln -sf yash "$DESTDIR/usr/bin/sh"
