--- a/repository/zlib/build
+++ b/repository/zlib/build
@@ -6,7 +6,7 @@ cd zlib-$VERSION
 ./configure --prefix=/usr
 
 make
-make DESTDIR="$DESTDIR" install
+make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
