Added libmpfr, libmpc and libgmp

--- a/repository/libressl/build
+++ b/repository/libressl/build
@@ -12,4 +12,6 @@ make
 make DESTDIR="$DESTDIR" install-strip
 
 rm -rf "$DESTDIR/usr/share/man"
+find $DESTDIR -type f -name '*.la' -delete
+
 install -Dm644 COPYING "$DESTDIR/usr/share/LICENSES/libressl.license"
