--- a/repository/yash/build
+++ b/repository/yash/build
@@ -3,6 +3,8 @@
 tar -xf yash-$VERSION.tar.gz
 cd yash-$VERSION
 
+export CFLAGS="$CFLAGS -static"
+
 ./configure \
 	--prefix=/usr \
 	--enable-array \
