Build many basic utilities as static binaries

--- a/repository/awk/build
+++ b/repository/awk/build
@@ -4,7 +4,7 @@ cd awk.git
 
 sed -i 's/gcc/cc/g' makefile
 
-make CC="$CC"
+make CC="$CC" CFLAGS="$CFLAGS -static"
 
 install -Dm755 a.out   "$DESTDIR/usr/bin/awk"
 install -Dm644 awk.1   "$DESTDIR/usr/share/man/man1/awk.1" 
