--- a/repository/m4/build
+++ b/repository/m4/build
@@ -3,7 +3,13 @@
 tar -xf m4-$VERSION.tar.xz
 cd m4-$VERSION
 
-./configure --prefix=/usr
+export CFLAGS="$CFLAGS -static"
+
+./configure \
+	--prefix=/usr \
+	--disable-nls \
+	--enable-threads=posix \
+	--without-packager
 
 make
 make DESTDIR="$DESTDIR" install-strip
