--- a/repository/curl/build
+++ b/repository/curl/build
@@ -9,6 +9,7 @@ cd curl-$VERSION
 	--enable-unix-sockets \
 	--enable-symbol-hiding \
 	--disable-manual \
+	--disable-docs \
 	--disable-ldap \
 	--disable-ares \
 	--with-openssl \
@@ -23,7 +24,6 @@ cd curl-$VERSION
 make
 make DESTDIR="$DESTDIR" install-strip
 
-rm -rf "$DESTDIR/usr/share/man/man3"
 rm -rf "$DESTDIR/usr/share/aclocal"
 
 find $DESTDIR -type f -name '*.la' -delete
