--- a/repository/skeleton/build
+++ b/repository/skeleton/build
@@ -1,46 +1,46 @@
 #!/bin/sh -e
 
 mkdir -m 755 \
-    "$DESTDIR/boot" \
-    "$DESTDIR/dev" \
-    "$DESTDIR/etc" \
-    "$DESTDIR/home" \
-    "$DESTDIR/mnt" \
-    "$DESTDIR/opt" \
-    "$DESTDIR/run" \
-    "$DESTDIR/usr" \
-    "$DESTDIR/usr/bin" \
-    "$DESTDIR/usr/include" \
-    "$DESTDIR/usr/lib" \
-    "$DESTDIR/usr/share" \
-    "$DESTDIR/usr/share/man" \
-    "$DESTDIR/usr/share/man/man1" \
-    "$DESTDIR/usr/share/man/man2" \
-    "$DESTDIR/usr/share/man/man3" \
-    "$DESTDIR/usr/share/man/man4" \
-    "$DESTDIR/usr/share/man/man5" \
-    "$DESTDIR/usr/share/man/man6" \
-    "$DESTDIR/usr/share/man/man7" \
-    "$DESTDIR/usr/share/man/man8" \
-    "$DESTDIR/var/cache" \
-    "$DESTDIR/var/log" \
-    "$DESTDIR/var/log/old" \
-    "$DESTDIR/var/lib" \
-    "$DESTDIR/var/lib/misc" \
-    "$DESTDIR/var/empty" \
-    "$DESTDIR/var/service" \
-    "$DESTDIR/var/spool"
+	"$DESTDIR/boot" \
+	"$DESTDIR/dev" \
+	"$DESTDIR/etc" \
+	"$DESTDIR/home" \
+	"$DESTDIR/mnt" \
+	"$DESTDIR/run" \
+	"$DESTDIR/usr" \
+	"$DESTDIR/usr/bin" \
+	"$DESTDIR/usr/include" \
+	"$DESTDIR/usr/lib" \
+	"$DESTDIR/usr/share" \
+	"$DESTDIR/usr/share/man" \
+	"$DESTDIR/usr/share/man/man1" \
+	"$DESTDIR/usr/share/man/man2" \
+	"$DESTDIR/usr/share/man/man3" \
+	"$DESTDIR/usr/share/man/man4" \
+	"$DESTDIR/usr/share/man/man5" \
+	"$DESTDIR/usr/share/man/man6" \
+	"$DESTDIR/usr/share/man/man7" \
+	"$DESTDIR/usr/share/man/man8" \
+	"$DESTDIR/var" \
+	"$DESTDIR/var/cache" \
+	"$DESTDIR/var/log" \
+	"$DESTDIR/var/log/old" \
+	"$DESTDIR/var/lib" \
+	"$DESTDIR/var/lib/misc" \
+	"$DESTDIR/var/empty" \
+	"$DESTDIR/var/service" \
+	"$DESTDIR/var/spool"
 
 mkdir -m 555 \
-    "$DESTDIR/proc" \
-    "$DESTDIR/sys"
+	"$DESTDIR/proc" \
+	"$DESTDIR/sys"
 
 mkdir -m 0750 "$DESTDIR/root"
 
 mkdir -m 1777 \
-    "$DESTDIR/tmp" \
-    "$DESTDIR/var/tmp" \
-    "$DESTDIR/var/spool/mail"
+	"$DESTDIR/tmp" \
+	"$DESTDIR/var/tmp" \
+	"$DESTDIR/var/spool/mail"
 
 ln -sf usr/bin "$DESTDIR/bin"
 ln -sf usr/lib "$DESTDIR/lib"
@@ -54,7 +54,7 @@ ln -sf /proc/self/mounts "$DESTDIR/etc/mtab"
 
 for i in fstab group host.conf hostname hosts issue os-release passwd profile rc.conf shells
 do 
-	install -m644 $file "$DESTDIR/etc/$i" 
+	install -m644 $i "$DESTDIR/etc/$i" 
 done 
  
 install -m600 crypttab "$DESTDIR/etc/crypttab" 
