--- a/repository/init-scripts/build
+++ b/repository/init-scripts/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-cd init.git
+cd init-scripts.git
  
 sed -i 's|log "Welcome to KISS!"||g'           lib/init/rc.boot
 sed -i 's|"${hostname:-KISS}"|/etc/hostname|g' lib/init/rc.boot
@@ -9,7 +9,7 @@ sed -i 's|=>|@|g'                              lib/init/rc.lib
 $CC -o kpow bin/kpow.c -static
  
 install -Dm755 lib/init/rc.lib       "$DESTDIR/usr/lib/init/rc.lib"
-install -Dm755 lib/init/rc.boot      "$DESTIDR/usr/lib/init/rc.boot"
+install -Dm755 lib/init/rc.boot      "$DESTDIR/usr/lib/init/rc.boot"
 install -Dm755 lib/init/rc.shutdown  "$DESTDIR/usr/lib/init/rc.shutdown"
 install -Dm755 kpow                  "$DESTDIR/usr/bin/kpow"
 
