Musl has no 'install-strip' target: strip manually

--- a/repository/musl/build
+++ b/repository/musl/build
@@ -4,9 +4,6 @@ mkdir -p "$DESTDIR/usr/bin"
 $CC $CFLAGS getent.c   -o "$DESTDIR/usr/bin/getent" 
 $CC $CFLAGS getconf.c  -o "$DESTDIR/usr/bin/getconf"
 
-strip --strip-unneeded "$DESTDIR/usr/bin/getent"
-strip --strip-unneeded "$DESTDIR/usr/bin/getconf"
-
 install -Dm755 cdefs.h "$DESTDIR/usr/include/sys/cdefs.h"
 install -Dm755 queue.h "$DESTDIR/usr/include/sys/queue.h"
 install -Dm755 tree.h  "$DESTDIR/usr/include/sys/tree.h"
@@ -19,7 +16,14 @@ cd musl-$VERSION
 	--syslibdir=/usr/lib
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR="$DESTDIR" install
 
 ln -sf /usr/lib/ld-musl-armhf.so.1 "$DESTDIR/usr/bin/ldd"
 ln -sf libc.so "$DESTDIR/usr/lib/ld-musl-armhf.so.1"
+
+strip --strip-unneeded "$DESTDIR/usr/bin/getent"
+strip --strip-unneeded "$DESTDIR/usr/bin/getconf"
+
+find $DESTDIR -name '*.a'   -type f -exec strip --strip-unneeded {} \;
+find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
+find $DESTDIR -name '*.o'   -type f -exec strip --strip-unneeded {} \;
