--- a/repository/binutils/build
+++ b/repository/binutils/build
@@ -28,3 +28,6 @@ make tooldir=/usr
 make tooldir=/usr DESTDIR="$DESTDIR" install-strip
 
 ln -sf ld.bfd "$DESTDIR/usr/bin/ld"
+
+rm -rf "$DESTDIR/usr/share/info"
+find $DESTDIR -type f -name '*.la' -delete
