Proper strip for sbase and ubase

--- a/repository/ubase/build
+++ b/repository/ubase/build
@@ -32,7 +32,7 @@ rm "$DESTDIR/usr/share/man/man8/mount.8"
 rm "$DESTDIR/usr/share/man/man8/umount.8"
 rm "$DESTDIR/usr/share/man/man1/mountpoint.1"
 
-for i in "$DESTDIR/usr/bin"
+for i in $(ls "$DESTDIR/usr/bin")
 do 
 	strip --strip-unneeded "$DESTDIR/usr/bin/$i"
 done
