--- a/repository/sbase/build
+++ b/repository/sbase/build
@@ -39,7 +39,7 @@ rm "$DESTDIR/usr/share/man/man1/find.1"
 rm "$DESTDIR/usr/share/man/man1/grep.1"
 rm "$DESTDIR/usr/share/man/man1/sed.1"
 
-for i in "$DESTDIR/usr/bin"
+for i in $(ls "$DESTDIR/usr/bin")
 do
 	strip --strip-unneeded "$DESTDIR/usr/bin/$i"
 done
