--- a/repository/zlib/build
+++ b/repository/zlib/build
@@ -6,7 +6,10 @@ cd zlib-$VERSION
 ./configure --prefix=/usr
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR="$DESTDIR" install
+
+find $DESTDIR -name '*.a'   -type f -exec strip --strip-unneeded {} \;
+find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 
 rm -rf "$DESTDIR/usr/share"
 find $DESTDIR -type f -name '*.la' -delete
