Ubase: disable custom patch for the time being

--- a/repository/ubase/build
+++ b/repository/ubase/build
@@ -2,7 +2,7 @@
 
 cd ubase.git
 
-patch -p1 < ../getty-login-add-autologin.patch
+#patch -p1 < ../getty-login-add-autologin.patch
 
 make \
 	PREFIX=/usr \
