Dhcpcd has no 'install-strip' target: strip manually

--- a/repository/dhcpcd/build
+++ b/repository/dhcpcd/build
@@ -12,9 +12,11 @@ cd dhcpcd-$VERSION
 	--without-udev
 
 make
-make DESTDIR="$DESTDIR" BINMODE=755 install-strip
+make DESTDIR="$DESTDIR" BINMODE=755 install
 
 install -Dm755 ../dhcpcd.run "$DESTDIR/etc/sv/dhcpcd/run"
 ln -sf /run/runit/supervise.dhcpcd "$DESTDIR/etc/sv/dhcpcd/supervise"
+
+strip --strip-unneeded "$DESTDIR/usr/bin/dhcpcd"
 
 rm -rf "$DESTDIR/var"
