--- a/repository/sbase/build
+++ b/repository/sbase/build
@@ -16,10 +16,11 @@ make \
 	DESTDIR="$DESTDIR" \
 	install
 
-install -Dm755 ../cron.run "$DESTDIR/etc/sv/cron/run" 
+install -Dm755 ../cron.run       "$DESTDIR/etc/sv/cron/run"
 ln -sf /run/runit/supervise.cron "$DESTDIR/etc/sv/cron/supervise"
 
-mv "$DESTDIR/usr/bin/xinstall" "$DESTDIR/usr/bin/install"
+mv "$DESTDIR/usr/bin/xinstall"              "$DESTDIR/usr/bin/install"
+mv "$DESTDIR/usr/share/man/man1/xinstall.1" "$DESTDIR/usr/share/man/man1/install.1"
 
 # strings and xargs already provided
 
@@ -39,7 +40,4 @@ rm "$DESTDIR/usr/share/man/man1/find.1"
 rm "$DESTDIR/usr/share/man/man1/grep.1"
 rm "$DESTDIR/usr/share/man/man1/sed.1"
 
-for i in $(ls "$DESTDIR/usr/bin")
-do
-	strip --strip-unneeded "$DESTDIR/usr/bin/$i"
-done
+find "$DESTDIR/usr/bin" -type f -exec strip --strip-unneeded {} \;
