--- a/repository/tzdata/build
+++ b/repository/tzdata/build
@@ -1,12 +1,12 @@
 #!/bin/sh -e
 
 tar -xf $VERSION.tar.gz
-cd $VERSION
+cd tz-$VERSION
 
 sed -i 's|sbin|bin|g' Makefile
 
 make
-make DESTDIR="$DESTDIR" install-strip
+make DESTDIR="$DESTDIR" install
 
 rm -rf "$DESTDIR/etc"
 
@@ -18,3 +18,6 @@ done
 
 # POSIX compliance (?)
 ./zic -d "$DESTDIR/usr/share/zoneinfo" -p America/New_York
+
+strip --strip-unneeded "$DESTDIR/usr/bin/zic"
+strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
