--- a/repository/patch/build
+++ b/repository/patch/build
@@ -9,8 +9,9 @@ do
 	$CC -c $i
 done
 
-$CC -static patch.c *.o -o patch
+$CC -static *.o -o patch
 
 install -Dm755 -t "$DESTDIR/usr/bin" patch
 install -Dm644 -t "$DESTDIR/usr/share/man/man1" patch.1
+
 strip --strip-unneeded "$DESTDIR/usr/bin/patch"
