Integrated some stripping

--- a/repository/libdrm/build
+++ b/repository/libdrm/build
@@ -18,6 +18,6 @@ muon setup \
 muon -C build samu
 muon -C build install -d "$DESTDIR"
 
-find "$DESTDIR/usr/lib" -type f -name '*.a'  -exec strip --strip-unneeded {} \;
-find "$DESTDIR/usr/lib" -type f -name '*.so' -exec strip --strip-unneeded {} \;
+find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
+find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
 find $DESTDIR -type f -name '*.la' -delete
