--- a/repository/tzdata/build
+++ b/repository/tzdata/build
@@ -9,6 +9,7 @@ make
 make DESTDIR="$DESTDIR" install
 
 rm -rf "$DESTDIR/etc"
+rm -rf "$DESTDIR/usr/share/man/man3"
 
 for t in africa asia australasia europe northamerica southamerica
 do
