Move wayland-protocols.pc where it should be

--- a/repository/wayland-protocols/build
+++ b/repository/wayland-protocols/build
@@ -11,3 +11,7 @@ muon setup \
 
 muon -C build samu
 muon -C build install -d "$DESTDIR"
+
+mkdir -p "$DESTDIR/usr/lib/pkgconfig"
+mv "$DESTDIR/usr/share/pkgconfig/wayland-protocols.pc" "$DESTDIR/usr/lib/pkgconfig"
+rmdir "$DESTDIR/usr/share/pkgconfig"
