--- a/repository/musl/build
+++ b/repository/musl/build
@@ -1,10 +1,9 @@
 #!/bin/sh -e
 
-mkdir -p "$DESTDIR/usr/bin" 
-$CC $CFLAGS getent.c   -o "$DESTDIR/usr/bin/getent" 
+mkdir -p "$DESTDIR/usr/bin"
+$CC $CFLAGS getent.c   -o "$DESTDIR/usr/bin/getent"
 $CC $CFLAGS getconf.c  -o "$DESTDIR/usr/bin/getconf"
 
-install -Dm755 ldd     "$DESTDIR/usr/bin/ldd"
 install -Dm755 cdefs.h "$DESTDIR/usr/include/sys/cdefs.h"
 install -Dm755 queue.h "$DESTDIR/usr/include/sys/queue.h"
 install -Dm755 tree.h  "$DESTDIR/usr/include/sys/tree.h"
@@ -19,7 +18,23 @@ cd musl-$VERSION
 make
 make DESTDIR="$DESTDIR" install
 
-ln -sf libc.so "$DESTDIR/usr/lib/ld-musl-armhf.so.1"
+# This *should* make musl architecture-independent
+# Taken from Alpine Linux
+case $(uname -m) in
+	aarch64*)	ARCH="aarch64" ;;
+	arm*)		ARCH="arm" ;;
+	x86)		ARCH="i386" ;;
+	x86_64)		ARCH="x86_64" ;;
+	ppc)		ARCH="powerpc" ;;
+	ppc64*)		ARCH="powerpc64" ;;
+	s390*)		ARCH="s390x" ;;
+	mips64*)	ARCH="mips64" ;;
+	mips*)		ARCH="mips" ;;
+	riscv64)	ARCH="riscv64" ;;
+	loongarch64)	ARCH="loongarch64" ;;
+esac
+
+ln -sf libc.so "$DESTDIR/usr/lib/ld-musl-$ARCH.so.1"
 
 strip --strip-unneeded "$DESTDIR/usr/bin/getent"
 strip --strip-unneeded "$DESTDIR/usr/bin/getconf"
@@ -27,3 +42,10 @@ strip --strip-unneeded "$DESTDIR/usr/bin/getconf"
 find $DESTDIR -name '*.a'   -type f -exec strip --strip-unneeded {} \;
 find $DESTDIR -name '*.so*' -type f -exec strip --strip-unneeded {} \;
 find $DESTDIR -name '*.o'   -type f -exec strip --strip-unneeded {} \;
+
+cat > "$DESTDIR/usr/bin/ldd" << EOF
+#!/bin/sh
+exec /lib/ld-musl-$ARCH.so.1 --list "\$@"
+EOF
+
+chmod 755 "$DESTDIR/usr/bin/ldd"
