--- a/repository/libdisplay-info/build
+++ b/repository/libdisplay-info/build
@@ -3,14 +3,14 @@
 tar -xf libdisplay-info-$VERSION.tar.gz
 cd libdisplay-info-$VERSION
 
-muon setup \
+meson setup \
 	-Dprefix=/usr \
 	-Dbuildtype=release \
 	-Ddefault_library=both \
 	build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
