--- a/repository/libdrm/build
+++ b/repository/libdrm/build
@@ -3,7 +3,7 @@
 tar -xf libdrm-$VERSION.tar.xz
 cd libdrm-$VERSION
 
-muon setup \
+meson setup \
 	-Dprefix=/usr \
 	-Dlibdir=/usr/lib \
 	-Dbuildtype=release \
@@ -15,8 +15,8 @@ muon setup \
 	-Dman-pages=disabled \
 	build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
