--- a/repository/libglvnd/build
+++ b/repository/libglvnd/build
@@ -3,10 +3,10 @@
 tar -xf libglvnd-v$VERSION.tar.gz
 cd libglvnd-v$VERSION
 
-muon setup -Dprefix=/usr -Dbuildtype=release build
+meson setup -Dprefix=/usr -Dbuildtype=release build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
