--- a/repository/pixman/build
+++ b/repository/pixman/build
@@ -3,7 +3,7 @@
 tar -xf pixman-$VERSION.tar.xz
 cd pixman-$VERSION
 
-muon setup \
+meson setup \
 	-Dprefix=/usr \
 	-Dbuildtype=release \
 	-Ddefault_library=both \
@@ -13,8 +13,8 @@ muon setup \
 	-Ddemos=disabled \
 	build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
