--- a/repository/seatd/build
+++ b/repository/seatd/build
@@ -3,14 +3,14 @@
 tar -xf $VERSION.tar.gz
 cd seatd-$VERSION
 
-muon setup \
+meson setup \
     -Dprefix=/usr \
     -Ddefault_library=both \
     -Dbuildtype=release \
     build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 install -Dm755 ../seatd.run "$DESTDIR/etc/sv/seatd/run"
 ln -sf /run/runit/supervise.seatd "$DESTDIR/etc/sv/seatd/supervise"
