--- a/repository/wayland/build
+++ b/repository/wayland/build
@@ -3,7 +3,7 @@
 tar -xf wayland-$VERSION.tar.xz
 cd wayland-$VERSION
 
-muon setup \
+meson setup \
 	-Dprefix=/usr \
 	-Dbuildtype=release \
 	-Ddefault_library=both \
@@ -12,8 +12,8 @@ muon setup \
 	-Ddtd_validation=false \
 	build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
