--- a/repository/wlroots/build
+++ b/repository/wlroots/build
@@ -3,7 +3,7 @@
 tar -xf wlroots-$VERSION.tar.gz
 cd wlroots-$VERSION
 
-muon setup \
+meson setup \
 	-Dprefix=/usr \
 	-Ddefault_library=both \
 	-Dexamples=false \
@@ -12,8 +12,8 @@ muon setup \
 	-Drenderers=gles2 \
 	build
 
-muon -C build samu
-muon -C build install -d "$DESTDIR"
+meson -C build compile
+meson -C build install -d "$DESTDIR"
 
 find "$DESTDIR/usr/lib" -type f -name '*.a'   -exec strip --strip-unneeded {} \;
 find "$DESTDIR/usr/lib" -type f -name '*.so*' -exec strip --strip-unneeded {} \;
