--- a/repository/skeleton/build
+++ b/repository/skeleton/build
@@ -1,5 +1,8 @@
 #!/bin/sh -e
 
+echo "This package is just a stub, edit it build parameters and remove this line"
+exit 1
+
 mkdir -m 755 \
 	"$DESTDIR/boot" \
 	"$DESTDIR/dev" \
@@ -51,9 +54,8 @@ ln -sf ../run/lock       "$DESTDIR/var/lock"
 ln -sf /proc/self/mounts "$DESTDIR/etc/mtab"
 
 for i in fstab group host.conf hostname hosts issue os-release passwd profile rc.conf shells
-do 
+do
 	install -m644 $i "$DESTDIR/etc/$i" 
-done 
- 
-install -m600 crypttab "$DESTDIR/etc/crypttab" 
-install -m600 shadow   "$DESTDIR/etc/shadow"
+done
+
+install -m600 shadow "$DESTDIR/etc/shadow"
