--- a/repository/tzdata/build
+++ b/repository/tzdata/build
@@ -1,5 +1,8 @@
 #!/bin/sh -e
 
+echo "This package is just a stub, edit it build parameters and remove this line"
+exit 1
+
 tar -xf $VERSION.tar.gz
 cd tz-$VERSION
 
@@ -22,3 +25,5 @@ done
 
 strip --strip-unneeded "$DESTDIR/usr/bin/zic"
 strip --strip-unneeded "$DESTDIR/usr/bin/zdump"
+
+ln -sf ???/??? "$DESTDIR/etc/localtime"
