--- a/repository/oksh/build
+++ b/repository/oksh/build
@@ -11,7 +11,7 @@ cd oksh-$VERSION
 	--enable-static \
 	--strip
 
-make LIBS=-lterminfo
+make
 make DESTDIR="$DESTDIR" install
 
 ln -sf oksh "$DESTDIR/usr/bin/sh"
